<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Giang2-CountClicker</string>
    <string name="action_settings">Settings</string>
    <string name="counter_summary">Summary</string>
    <string name="edit_counters">Edit Counters</string>
    <string name="counter_name">Enter New Counter name here</string>
    <string name="new_counter">Add New Counter</string>
    <string name="save">Save</string>
    <string name="select_counter">Select a counter</string>
    <string name="title_activity_counter_clicker">CounterClickerActivity</string>
    <string name="title_activity_counter">CounterActivity</string>
    <string name="increment_counter">Increment</string>
	<string name="rename_counter">Rename Counter</string>
	<string name="reset_counter">Reset Counter</string>
	<string name="rename_old_counter">Enter new name for counter</string>
	<string name="delete_counter">Delete Counter</string>
	<string name="order_name">Order By Name</string>
	<string name="order_count">Order By Count</string>

</resources>
