<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/countListTitle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_counter"
        android:textSize="24sp" >
    </TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@color/gray"
        android:orientation="horizontal" >
    </LinearLayout>

    <ListView
        android:id="@+id/counterList"
        android:layout_width="fill_parent"
        android:layout_height="275dp"
        android:cacheColorHint="@color/white"
        android:scrollbars="vertical" >
    </ListView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@color/gray"
        android:orientation="horizontal" >
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/textbody"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/counter_name"
            android:scrollbars="horizontal" />

        <Button
            android:id="@+id/newcounter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_counter" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/orderByName"
            style="@android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_weight="1"
            android:text="@string/order_name" />

        <Button
            android:id="@+id/orderByCount"
            style="@android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_weight="1"
            android:text="@string/order_count" />
    </LinearLayout>

   
    </LinearLayout>
